# dicecraft

./: .gitmodules  CMakeLists.txt  README.md  embed_tilemap.py
src/: CMakeLists.txt  block.h  chunk.cpp  chunk.h  chunk_generator.h  chunk_shader.h  computer.h  emb_tilemap.h  game.cpp  hash_util.h  logic_shader.h  opengl.h  overlay.h  perlin.h  player.cpp  player.h  saver.cpp  saver.h  selection.h  shader.h  tilemap.h  world.cpp  world.h  world_gen.cpp
src/glad/: CMakeLists.txt  glad.c  glad.h
src/shaders/: logic_frag.glsl  logic_vert.glsl  ov_vert.glsl  sel_frag.glsl  sel_vert.glsl
